--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
+
 *{
   box-sizing: border-box;
   margin: 0;
@@ -13,6 +14,35 @@ body {
   font-size: 16px;
 }
 
+/* home */
+
+.container__home {
+  padding: 20px;
+  max-width: 80%;
+  margin: auto;
+  text-align: center;
+  margin-top: 40px;
+}
+
+.container__home__btns {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.btn__page {
+  background-color: blueviolet;
+  color: #f3f3f3;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 8px;
+  border-radius: 12px;
+}
+
+
+
+
 .container {
   padding: 20px;
   max-width: 80%;
@@ -23,9 +53,15 @@ body {
   justify-content: center;
 }
 
+.container__content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
 .container__title {
-  font-size: 62px;
-  text-align: center;
+  font-size: 48px;
   margin-bottom: 20px;
 }
 
