--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -22,6 +22,12 @@ body {
   margin: auto;
   text-align: center;
   margin-top: 40px;
+  height: 400px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .container__home__btns {
@@ -39,9 +45,6 @@ body {
   padding: 8px;
   border-radius: 12px;
 }
-
-
-
 
 .container {
   padding: 20px;
@@ -62,6 +65,5 @@ body {
 
 .container__title {
   font-size: 48px;
-  margin-bottom: 20px;
 }
 
