--- a/assets/stylesheets/home.css
+++ b/assets/stylesheets/home.css
@@ -56,6 +56,10 @@
   text-align: center;
 }
 
+#instructions p {
+  margin-bottom: 1em;
+}
+
 #instructions a {
   text-decoration: none;
   color: blueviolet;
