--- a/assets/stylesheets/home.css
+++ b/assets/stylesheets/home.css
@@ -1,23 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Mouse+Memoirs&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-#header {
-  padding: 24px 0;
-}
 
 #header__container {
   max-width: 80%;
-  margin: auto;
+  margin: auto; padding: 8px;
   text-align: center;
 }
 
 #header__container h2 {
   font-family: "Mouse Memoirs", sans-serif;
   font-size: 52px;
-  margin-bottom: 16px;
+  margin-bottom: 1em;
 }
 
 #header__container p {
   font-size: 22px;
+  margin-bottom: 0.5em;
 }
 
 #container {
@@ -51,18 +49,20 @@
 }
 
 #instructions {
-  font-size: 18px;
-  padding: 24px 0;
+  font-size: 20px;
   text-align: center;
+  max-width: 70%;
+  margin: auto;
 }
 
 #instructions p {
   margin-bottom: 1em;
+  line-height: 24px
 }
 
 #instructions a {
   text-decoration: none;
-  color: blueviolet;
+  color: #8a2be2;
 
   transition: all ease-in-out .2s;
 }
